RESOLVED FIXED113526
REGRESSION(r143102): Ignore table cell's height attribute when checking if containing block has auto height.
https://bugs.webkit.org/show_bug.cgi?id=113526
Summary REGRESSION(r143102): Ignore table cell's height attribute when checking if co...
alan
Reported 2013-03-28 12:14:41 PDT
Created attachment 195614 [details] test reduction ssia see attached test case
Attachments
test reduction (451 bytes, text/html)
2013-03-28 12:14 PDT, alan
no flags
Patch (4.51 KB, patch)
2013-03-28 13:13 PDT, alan
no flags
Archive of layout-test-results from gce-cr-linux-07 for chromium-linux-x86_64 (621.81 KB, application/zip)
2013-03-28 14:19 PDT, WebKit Review Bot
no flags
Patch (4.67 KB, patch)
2013-03-28 14:26 PDT, alan
no flags
Patch (5.60 KB, patch)
2013-03-28 15:20 PDT, alan
no flags
Archive of layout-test-results from gce-cr-linux-02 for chromium-linux-x86_64 (1.02 MB, application/zip)
2013-03-28 16:15 PDT, WebKit Review Bot
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (588.26 KB, application/zip)
2013-03-28 22:50 PDT, Build Bot
no flags
Patch (5.60 KB, patch)
2013-03-28 23:53 PDT, alan
no flags
alan
Comment 1 2013-03-28 12:15:32 PDT
alan
Comment 2 2013-03-28 13:13:54 PDT
Antti Koivisto
Comment 3 2013-03-28 13:20:07 PDT
Comment on attachment 195628 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=195628&action=review > Source/WebCore/ChangeLog:6 > + It matches Firefox behaviour. More importantly it matches our behavior before r143102, right? Would be good to mention that too. We don't really aspire to match Firefox exactly with all the table edge cases. > Source/WebCore/rendering/RenderBoxModelObject.cpp:390 > > + // Table cells violate what the CSS spec says to do with heights. Basically we > + // don't care if the cell specified a height or not. Is the comment correct? I thought CSS spec specifically left some of this open?
WebKit Review Bot
Comment 4 2013-03-28 14:19:25 PDT
Comment on attachment 195628 [details] Patch Attachment 195628 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17328409 New failing tests: fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height.html
WebKit Review Bot
Comment 5 2013-03-28 14:19:28 PDT
Created attachment 195640 [details] Archive of layout-test-results from gce-cr-linux-07 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
alan
Comment 6 2013-03-28 14:26:42 PDT
alan
Comment 7 2013-03-28 15:20:27 PDT
alan
Comment 8 2013-03-28 15:21:15 PDT
Comment on attachment 195655 [details] Patch removing reftest case
WebKit Review Bot
Comment 9 2013-03-28 16:15:40 PDT
Comment on attachment 195655 [details] Patch Attachment 195655 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17332217 New failing tests: fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height.html
WebKit Review Bot
Comment 10 2013-03-28 16:15:44 PDT
Created attachment 195670 [details] Archive of layout-test-results from gce-cr-linux-02 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-02 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Build Bot
Comment 11 2013-03-28 16:33:31 PDT
Build Bot
Comment 12 2013-03-28 22:50:23 PDT
Comment on attachment 195655 [details] Patch Attachment 195655 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17335235 New failing tests: fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height.html
Build Bot
Comment 13 2013-03-28 22:50:25 PDT
Created attachment 195699 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
alan
Comment 14 2013-03-28 23:53:32 PDT
WebKit Review Bot
Comment 15 2013-03-29 00:35:15 PDT
Comment on attachment 195702 [details] Patch Clearing flags on attachment: 195702 Committed r147199: <http://trac.webkit.org/changeset/147199>
WebKit Review Bot
Comment 16 2013-03-29 00:35:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.