REGRESSION(r143102): Ignore table cell's height attribute when checking if containing block has auto height. https://bugs.webkit.org/show_bug.cgi?id=113526

Source/WebCore:

It matches shipping Safari and Firefox behaviour.

Patch by Zalan Bujtas <zalan@apple.com> on 2013-03-29
Reviewed by Antti Koivisto.

Test: fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight):

LayoutTests:

Patch by Zalan Bujtas <zalan@apple.com> on 2013-03-29
Reviewed by Antti Koivisto.

* fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height-expected.txt: Added.
* fast/replaced/iframe-with-percentage-height-within-table-with-table-cell-ignore-height.html: Added.

Canonical link: https://commits.webkit.org/131914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147199 268f45cc-cd09-0410-ab3c-d52691b4dbfc